--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Your awesome title
-author: GitHub User
+title: Hola Bon Dia
+theme: minima
+author: Adria Armesto
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: > # Prova de GitHub per a M05
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
